force-app/main/default/objects/sm_Store_Order__c/sm_Store_Order__c.object-meta.xml
<CustomObject>
    <label>Store Order</label>
    <nameField>
        <displayFormat>SO-{YYYY}-{MM}-{00000}</displayFormat>
        <label>Store Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>