force-app/main/default/objects/sm_Store_Order__c/fields/sm_Contact__c.field-meta.xml
<CustomField>
    <fullName>sm_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Store Orders</relationshipLabel>
    <relationshipName>Store_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>