force-app/main/default/objects/sm_Store_Order__c/fields/sm_Gross_Total__c.field-meta.xml
<CustomField>
    <fullName>sm_Gross_Total__c</fullName>
    <label>Gross Total</label>
    <summarizedField>sm_Store_Order_Item__c.sm_Extended_Price__c</summarizedField>
    <summaryForeignKey>sm_Store_Order_Item__c.sm_Store_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>