force-app/main/default/objects/sm_Store_Order__c/fields/sm_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>sm_Net_Total__c</fullName>
    <description>The net total for the order calculated from the Order Items minus the individual discounts.  An order level discount may be applied via a code an this total will reflect the Order Item Net - Order Discount Percent</description>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>