force-app/main/default/objects/sm_Store_Order__c/fields/sm_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>sm_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Pay Pal</fullName>
            </value>
            <value>
                <fullName>Venmo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>