force-app/main/default/objects/sm_Store_Order__c/listViews/All_Store_Orders.listView-meta.xml
<ListView>
    <fullName>All_Store_Orders</fullName>
    <columns>NAME</columns>
    <columns>sm_Contact__c</columns>
    <columns>sm_Payment_Method__c</columns>
    <columns>sm_Gross_Total__c</columns>
    <columns>sm_Net_Total__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Store Orders</label>
</ListView>