force-app/main/default/objects/sm_Store_Order__c/listViews/Todays_Orders.listView-meta.xml
<ListView>
    <fullName>Todays_Orders</fullName>
    <columns>NAME</columns>
    <columns>sm_Contact__c</columns>
    <columns>sm_Payment_Method__c</columns>
    <columns>sm_Gross_Total__c</columns>
    <columns>sm_Net_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Orders</label>
</ListView>